--- a/src/style/LandingPage.css
+++ b/src/style/LandingPage.css
@@ -1,8 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Playwrite+AU+SA:wght@100..400&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 body .top {
@@ -26,7 +30,7 @@ body .top {
 }
 
 .top header .logo p {
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: "Playwrite AU SA", cursive;
   font-size: 1.8rem;
   color: #d3c098;
   font-weight: 600;
@@ -41,26 +45,30 @@ body .top {
   text-decoration: none;
   color: #d3c098;
   font-size: 1rem;
+  font-weight: 300;
 }
 
 .top .content {
-  width: 50%;
   padding: 0 0 0 7rem;
   margin-top: 8rem;
 }
 
+.top .content .left {
+  width: 50%;
+}
+
 .top .content .title p {
-  font-size: 2.5rem;
+  font-size: 4.5rem;
   font-weight: 600;
   color: #e1d3b8;
-  margin-bottom: 1.5rem;
+  margin-bottom: 2.5rem;
 }
 
 .top .content .desc p {
   color: #e9e4dc;
   font-weight: 300;
-  line-height: 1.6rem;
-  margin-bottom: 1.5rem;
+  line-height: 1.8rem;
+  margin-bottom: 2.5rem;
 }
 
 .top .content .btn li {
@@ -70,7 +78,20 @@ body .top {
 
 .top .content .btn a {
   color: #795757;
-  background-color: #e9e4dc;
-  padding: 0.5rem 2.5rem;
+  background-color: #ede5d3;
+  padding: 0.8rem 3rem;
+  font-weight: 300;
   text-decoration: none;
+  transition: 0.2s;
+}
+
+.top .content .btn a:hover {
+  color: #ede5d3;
+  background-color: #795757;
+}
+
+.mid {
+  width: 100%;
+  height: 100vh;
+  background-color: #ede5d3;
 }
