--- a/src/style/LandingPage.css
+++ b/src/style/LandingPage.css
@@ -78,7 +78,7 @@ body .top {
 
 .top .content .btn a {
   color: #795757;
-  background-color: #ede5d3;
+  background-color: #e9dcbf;
   padding: 0.8rem 3rem;
   font-weight: 300;
   text-decoration: none;
@@ -88,10 +88,4 @@ body .top {
 .top .content .btn a:hover {
   color: #ede5d3;
   background-color: #795757;
-}
-
-.mid {
-  width: 100%;
-  height: 100vh;
-  background-color: #ede5d3;
 }
