--- a/src/style/MenuPage.css
+++ b/src/style/MenuPage.css
@@ -67,6 +67,7 @@
   background-color: #d9d4cb;
   margin: 0 0.5em 0.5em 0;
   border-radius: 8px;
+  cursor: pointer;
 }
 
 .menuPage .menuList .menuItem .menuText {
@@ -93,4 +94,95 @@
   font-size: 1rem;
   font-weight: 500;
   color: #795757;
+}
+
+.menuPage .popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.menuPage .popup-overlay .popup {
+  background: #d9d4cb;
+  padding: 2rem;
+  border-radius: 10px;
+  width: 350px;
+  max-width: 90%;
+  animation: fadeIn 0.3s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.popup-image {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 1rem;
+}
+
+.popup .menuTextSelected p.title {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #795757;
+}
+
+.popup .menuTextSelected p.desc {
+  font-size: 0.9rem;
+  font-weight: 300;
+  color: #795757;
+  margin: 1rem 0;
+}
+
+.add-to-cart {
+  margin-top: 1rem;
+  color: #ede5d3;
+  background-color: #795757;
+  padding: 0.5rem 1rem;
+  border: none;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.add-to-cart:hover {
+  color: #795757;
+  background-color: #ede5d3;
+}
+
+.menuPage .popup-overlay .quantity-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.25rem;
+}
+
+.menuPage .popup-overlay .quantity-wrapper p.price {
+  font-size: 1rem;
+  font-weight: 500;
+  color: #795757;
+}
+
+.menuPage .popup-overlay .quantity-wrapper input {
+  width: 60px;
+  padding: 0.25rem;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
