--- a/src/style/RegisterPage.css
+++ b/src/style/RegisterPage.css
@@ -7,7 +7,7 @@
   font-family: "Roboto", sans-serif;
 }
 
-.loginPage {
+.registerPage {
   width: 100%;
   height: 100vh;
   background-color: #241f1f;
@@ -16,7 +16,7 @@
   justify-content: center;
 }
 
-.loginPage .container {
+.registerPage .container {
   width: 20em;
   height: fit-content;
   background-color: #ede5d3;
@@ -74,7 +74,7 @@
   background-color: #ede5d3;
 }
 
-.container p.register {
+.container p.login {
   text-align: center;
   margin-top: 1rem;
   font-size: 0.9em;
@@ -82,8 +82,14 @@
   color: #795757;
 }
 
-.container p.register a {
+.container p.login a {
   text-decoration: none;
   color: #795757;
   cursor: pointer;
+}
+
+.error {
+  color: red;
+  font-size: 0.9rem;
+  margin-top: 4px;
 }
