add cart feature (jsx and css)

--- a/src/style/LandingPage.css
+++ b/src/style/LandingPage.css
@@ -113,3 +113,12 @@ body .top {
   color: #ede5d3;
   background-color: #795757;
 }
+
+.landingPage .cart {
+  width: 30%;
+  height: 100vh;
+  background-color: #887b60;
+  position: absolute;
+  top: -100%;
+  right: 0;
+}
