--- a/src/style/RegisterPage.css
+++ b/src/style/RegisterPage.css
@@ -10,17 +10,17 @@
 .registerPage {
   width: 100%;
   height: 100vh;
-  background-color: #241f1f;
+  background-color: #1e1d1c;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .registerPage .container {
-  width: 20em;
+  width: 23em;
   height: fit-content;
-  background-color: #ede5d3;
-  padding: 2rem 1.5rem;
+  background-color: #2f2e2b;
+  padding: 3rem 2rem;
   border-radius: 4px;
   display: flex;
   flex-direction: column;
@@ -28,16 +28,16 @@
 }
 
 .container p.title {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   font-weight: 600;
-  color: #795757;
+  color: #ede5d3;
 }
 
 .container p.text {
-  margin: 1rem 0 2rem;
+  margin: 1rem 0 2.5rem;
   font-size: 0.9em;
-  color: #795757;
-  font-weight: 300;
+  color: #ede5d3;
+  font-weight: 200;
 }
 
 .container form input {
@@ -79,12 +79,12 @@
   margin-top: 1rem;
   font-size: 0.9em;
   font-weight: 300;
-  color: #795757;
+  color: #ede5d3;
 }
 
 .container p.login a {
   text-decoration: none;
-  color: #795757;
+  color: #ede5d3;
   cursor: pointer;
 }
 
